@@ -24,6 +24,7 @@ ImageMagick Changes</font></font></font></b></td>
 <dd>
 <pre>
 2001-10-22  Cristy  <cristy@mystic.es.dupont.com>
+	* Added a MPEG coder module.
 	* Added ImageType member to the image_info structure (suggested
 	  by Glenn)
 
